--- a/src/About/index.scss
+++ b/src/About/index.scss
@@ -17,7 +17,9 @@
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
-  font-size: 22px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  -webkit-text-fill-color:#f06529;
   font-weight: 700;
 }
 
